# scacchiera_cpp

./: .gitignore  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.h  Main  Makefile  README.md  Readme.txt  cmake_install.cmake  draw.cpp  draw.h  esempioPerReplay.txt  get_moves.cpp  get_moves.h  logfile.txt  logfileComputerVSComputer.txt  main  main.cpp  main_board.cpp  prova  replay  replay.cpp  scacchiera  scacchiera.cpp  special_moves.cpp  special_moves.h
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn1.cpp  Pawn1.h  Pawn2.cpp  Pawn2.h  Pawn6.cpp  Pawn6.h  Pawn7.cpp  Pawn7.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Space.cpp  Space.h
